--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       width: 40px;
       height: 40px;
       background-color: var(--hellgrau);
-      background-image: url('https://via.placeholder.com/40');
+      background-image: url('persbet_logo1.png');
       background-size: cover;
       background-position: center;
       border-radius: 4px;
