--- a/index.html
+++ b/index.html
@@ -176,7 +176,8 @@
 
   <section id="ueber">
     <h1>Über mich</h1>
-    <p>Ich heiße Max Mustermann und biete als diplomierter Pflegefachmann mobile und flexible Altenbetreuung im Raum [Ort] an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Senioren und ihre Angehörigen im Alltag.</p>
+    <img src="flexbetreuung1.jpg" alt="Portrait von Werner Juppe">
+    <p>Ich heiße Werner Juppe und biete mobile und flexible Altenbetreuung im Raum Wels (Oberösterreich) an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Senioren und ihre Angehörigen im Alltag.</p>
   </section>
 
   <section id="leistungen">
