--- a/datenschutzerklaerung.html
+++ b/datenschutzerklaerung.html
@@ -43,11 +43,11 @@
 
   <h2>Kontakt</h2>
   <p>
-    Max Mustermann<br>
-    Musterstraße 1<br>
-    1234 Musterstadt<br>
-    E-Mail: max@altenbetreuung.at<br>
-    Telefon: 0123 456 789
+    Werner Juppe<br>
+    Gilmstraße 4<br>
+    A-4600 Wels<br>
+    E-Mail: juppe.werner[at]gmx.at<br>
+    Telefon: 0681-10805810
   </p>
 </body>
 </html>
