--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Mobile Altenbetreuung</title>
+  <title>Flexible Betreuung</title>
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
   <style>
     :root {
@@ -239,7 +239,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Mobile Altenbetreuung – Max Mustermann | Alle Rechte vorbehalten</p>
+    <p>&copy; 2025 Flexible Betreuung – Werner Juppe | Alle Rechte vorbehalten</p>
   </footer>
 </body>
 </html>
