--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
   <header>
     <div class="logo-container">
       <div class="logo-placeholder"></div>
-      <div class="schriftzug">Personenbetreuung</div>
+      <div class="schriftzug">Flexible Betreuung</div>
     </div>
     <nav>
       <a href="#ueber">Über mich</a>
