--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
       <a href="#kontakt">Kontakt</a>
     </nav>
   </header>
+  
+  <section>
+    <div style="display: flex; justify-content: center;">
+      <img src="flexbetreuung_titel1" alt="Titelbild Flexible Betreuung" style="width: 100%; max-width: 1200px; height: auto; border-radius: 8px;">
+    </div>
+  </section>
 
   <section id="ueber">
     <h1>Über mich</h1>
