--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
   <section>
     <div style="display: flex; justify-content: center;">
-      <img src="flexbetreuung_titel1" alt="Titelbild Flexible Betreuung" style="width: 100%; max-width: 1200px; height: auto; border-radius: 8px;">
+      <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="width: 100%; max-width: 1200px; height: auto; border-radius: 8px;">
     </div>
   </section>
 
