--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </header>
   
   <section>
-    <div style="display: flex; justify-content: center;">
+    <div style="display: flex; flex-direction: column; align-items: center;">
       <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="width: 100%; max-width: 500px; height: auto; border-radius: 8px;">
     </div>
   </section>
