--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
   
   <section>
     <div style="display: flex; flex-direction: column; align-items: center;">
-      <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="width: 100%; max-width: 500px; height: auto; border-radius: 8px;">
+      <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;"">
     </div>
   </section>
 
