--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
   </header>
   
   <section>
-    <div style="display: flex; flex-direction: column; align-items: center; max-width: 900px; margin: auto;">
+    <div style="max-width: 900px; margin: auto;">
       <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;"">
     </div>
   </section>
