--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     header {
       position: sticky;
       top: 0;
-      background-color: white;
+      background-color: #f8f8f8;
       border-bottom: 1px solid var(--hellgrau);
       padding: 1rem 2rem;
       z-index: 1000;
