--- a/index.html
+++ b/index.html
@@ -147,9 +147,22 @@
       }
 
       nav {
-        justify-content: flex-start;
+        flex-direction: column;
+        align-items: flex-start;
         width: 100%;
         margin-top: 1rem;
+        gap: 0.75rem; /* geringerer Abstand zwischen Links */
+      }
+      
+      nav a {
+        padding: 0.5rem 0;
+        font-size: 1rem;
+      }
+    }
+            nav {
+              justify-content: flex-start;
+              width: 100%;
+              margin-top: 1rem;
       }
     }
   </style>
