--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     }
 
     .schriftzug {
-      font-size: 1.2rem;
+      font-size: 1.4rem;
       font-weight: bold;
       color: var(--braun);
     }
@@ -143,20 +143,20 @@
     @media (max-width: 600px) {
       header {
         flex-direction: column;
-        align-items: flex-start;
+        align-items: center;
       }
 
       nav {
-        flex-direction: column;
-        align-items: flex-start;
-        width: 100%;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
         margin-top: 1rem;
-        gap: 0.75rem; /* geringerer Abstand zwischen Links */
+        gap: 1rem; /* geringerer Abstand zwischen Links */
       }
       
       nav a {
-        padding: 0.5rem 0;
-        font-size: 1rem;
+        padding: 0.5rem 1rem;
+        font-size: 0.95rem;
       }
     }
             nav {
