--- a/index.html
+++ b/index.html
@@ -146,23 +146,75 @@
         align-items: center;
       }
 
+  nav {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    margin-top: 1rem;
+  }
+
+  nav a {
+    padding: 0.5rem 1rem;
+    font-size: 0.95rem;
+  }
+}
+
+  nav {
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    margin-top: 1rem;
+    gap: 0.75rem; /* geringerer Abstand zwischen Links */
+  }
+
+  nav a {
+    padding: 0.5rem 0;
+    font-size: 1rem;
+  }
+}
+
       nav {
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
+        justify-content: flex-start;
+        width: 100%;
         margin-top: 1rem;
-        gap: 1rem; /* geringerer Abstand zwischen Links */
-      }
-      
-      nav a {
-        padding: 0.5rem 1rem;
-        font-size: 0.95rem;
       }
     }
-            nav {
-              justify-content: flex-start;
-              width: 100%;
-              margin-top: 1rem;
+      .burger {
+      display: none;
+      background: none;
+      border: none;
+      font-size: 1.5rem;
+      cursor: pointer;
+      color: var(--braun);
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      .burger {
+        display: block;
+        margin-left: auto;
+      }
+
+      nav {
+        display: none;
+        flex-direction: column;
+        gap: 0.5rem;
+        width: 100%;
+        margin-top: 1rem;
+      }
+
+      nav.open {
+        display: flex;
+      }
+
+      nav a {
+        padding: 0.5rem 1rem;
+        font-size: 1rem;
       }
     }
   </style>
