--- a/index.html
+++ b/index.html
@@ -224,6 +224,9 @@
     <div class="logo-container">
       <div class="logo-placeholder"></div>
       <div class="schriftzug">Flexible Betreuung</div>
+      <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
+      ☰
+      </button>
     </div>
     <nav>
       <a href="#ueber">Über mich</a>
