--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     }
 
     body {
+      scroll-padding-top: 80px;
       font-family: 'Open Sans', sans-serif;
       color: var(--braun);
       background-color: white;
