--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     }
 
     body {
-      scroll-padding-top: 260px;
       font-family: 'Open Sans', sans-serif;
       color: var(--braun);
       background-color: white;
@@ -83,6 +82,10 @@
       padding: 2rem 2rem;
       max-width: 900px;
       margin: auto;
+    }
+
+    section:target {
+      scroll-margin-top: 100px;
     }
 
     h1, h2 {
