--- a/index.html
+++ b/index.html
@@ -149,7 +149,11 @@
         flex-direction: column;
         align-items: center;
       }
-
+    .burger {
+        display: block;
+        margin-left: auto;
+    }
+      
   nav {
     flex-direction: row;
     flex-wrap: wrap;
