--- a/index.html
+++ b/index.html
@@ -61,23 +61,6 @@
       color: var(--braun);
     }
 
-    nav {
-      display: flex;
-      gap: 2rem;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    nav a {
-      color: var(--braun);
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    nav a:hover {
-      color: var(--orange);
-    }
-
     section {
       padding: 2rem 2rem;
       max-width: 900px;
@@ -144,87 +127,77 @@
       padding: 2rem 1rem;
     }
 
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: center;
-      }
-    .burger {
-        display: block;
-        margin-left: auto;
-    }
-      
+nav {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+nav a {
+  color: var(--braun);
+  text-decoration: none;
+  font-weight: bold;
+}
+
+nav a:hover {
+  color: var(--orange);
+}
+
+.burger {
+  display: none;
+  background: none;
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: var(--braun);
+}
+
+@media (max-width: 600px) {
+  header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .burger {
+    display: block;
+    margin-left: auto;
+  }
+
   nav {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
+    display: none;
+    flex-direction: column;
+    gap: 0.5rem;
+    width: 100%;
     margin-top: 1rem;
+  }
+
+  nav.open {
+    display: flex;
   }
 
   nav a {
     padding: 0.5rem 1rem;
-    font-size: 0.95rem;
-  }
-}
-
-  nav {
-    flex-direction: column;
-    align-items: flex-start;
-    width: 100%;
-    margin-top: 1rem;
-    gap: 0.75rem; /* geringerer Abstand zwischen Links */
-  }
-
-  nav a {
-    padding: 0.5rem 0;
     font-size: 1rem;
   }
 }
 
+@media (min-width: 601px) {
+  .burger {
+    display: none;
+  }
+
   nav {
-    justify-content: flex-start;
-    width: 100%;
-    margin-top: 1rem;
-      }
-    }
-      .burger {
-      display: none;
-      background: none;
-      border: none;
-      font-size: 1.5rem;
-      cursor: pointer;
-      color: var(--braun);
-    }
+    display: flex !important;
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 2rem;
+    margin-top: 0;
+    width: auto;
+  }
+}
 
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      .burger {
-        display: block;
-        margin-left: auto;
-      }
-
-      nav {
-        display: none;
-        flex-direction: column;
-        gap: 0.5rem;
-        width: 100%;
-        margin-top: 1rem;
-      }
-
-      nav.open {
-        display: flex;
-      }
-
-      nav a {
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-      }
-    }
   </style>
 </head>
 <body>
