--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     :root {
       --orange: #FC9C72;
       --braun: #4D4845;
-      --hellgrau: #f8f8f8;
+      --hellgrau: #dddddd;
     }
 
     * {
@@ -29,7 +29,7 @@
     header {
       position: sticky;
       top: 0;
-      background-color: #D2D3CE;
+      background-color: #dddddd;
       border-bottom: 2px solid var(--hellgrau);
       padding: 1rem 2rem;
       z-index: 1000;
