--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     header {
       position: sticky;
       top: 0;
-      background-color: #dddddd;
+      background-color: #cccccc;
       border-bottom: 2px solid var(--hellgrau);
       padding: 1rem 2rem;
       z-index: 1000;
