--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       --orange: #FC9C72;
       --braun: #4D4845;
       --hellgrau: #dddddd;
+      --border: #f0f0f0;
     }
 
     * {
@@ -30,7 +31,7 @@
       position: sticky;
       top: 0;
       background-color: #cccccc;
-      border-bottom: 2px solid var(--hellgrau);
+      border-bottom: 2px solid var(--border);
       padding: 1rem 2rem;
       z-index: 1000;
       display: flex;
