--- a/index.html
+++ b/index.html
@@ -156,11 +156,14 @@ nav a:hover {
 
 .burger {
   display: none;
-  background: none;
+  background-color: var(--orange); /* sichtbarer Hintergrund */
+  color: white;
   border: none;
+  border-radius: 4px;
   font-size: 1.5rem;
   cursor: pointer;
-  color: var(--braun);
+  padding: 0.4rem 0.7rem;
+  transition: background-color 0.2s ease;
 }
 
 @media (max-width: 600px) {
