--- a/index.html
+++ b/index.html
@@ -130,6 +130,24 @@
       background-color: #e88b61;
     }
 
+    .cta-button {
+  display: inline-block;
+  background-color: var(--orange);
+  color: white;
+  text-decoration: none;
+  padding: 0.75rem 1.5rem;
+  border-radius: 8px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  text-align: center;
+  margin: 2rem auto;
+  transition: background-color 0.3s ease;
+}
+
+.cta-button:hover {
+  background-color: #e88b61;
+}
+
     footer {
       background-color: var(--braun);
       color: white;
@@ -243,6 +261,8 @@ nav a:hover {
     <p>Ich heiße Werner Juppe und biete mobile und flexible Altenbetreuung im Raum Wels (Oberösterreich) an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Senioren und ihre Angehörigen im Alltag.</p>
   </section>
 
+  <a href="tel:0123456789" class="cta-button">📞 Jetzt anrufen</a>
+
   <section id="leistungen">
     <h2>Leistungen</h2>
     <div class="leistungen">
@@ -265,6 +285,8 @@ nav a:hover {
     <h2>Arbeitsweise</h2>
     <p>Ich arbeite zuverlässig, flexibel und auf Augenhöhe mit meinen Klient:innen. Im kostenlosen Erstgespräch klären wir gemeinsam, wie ich bestmöglich unterstützen kann. Dabei stehen Vertrauen, Würde und Individualität immer im Vordergrund.</p>
   </section>
+
+  <a href="tel:0123456789" class="cta-button">📞 Persönliches Gespräch starten</a>
 
   <section id="kontakt">
     <h2>Kontakt</h2>
