--- a/index.html
+++ b/index.html
@@ -229,6 +229,26 @@ nav a:hover {
   }
 }
 
+/* WhatsApp Floating Button */
+.whatsapp-float {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background-color: #25D366;
+  color: white;
+  font-size: 1.8rem;
+  padding: 0.6rem 1rem;
+  border-radius: 50px;
+  text-decoration: none;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  z-index: 1001;
+  transition: background-color 0.3s ease;
+}
+
+.whatsapp-float:hover {
+  background-color: #1ebc5a;
+}
+    
   </style>
 </head>
 <body>
@@ -345,5 +365,8 @@ nav a:hover {
     });
   });
 </script>
+  <a href="https://wa.me/4368110805810" class="whatsapp-float" target="_blank" aria-label="WhatsApp-Nachricht senden">
+  💬
+  </a>
 </body>
 </html>
