--- a/datenschutzerklaerung.html
+++ b/datenschutzerklaerung.html
@@ -35,6 +35,9 @@
   <h2>Formular-Dienstleister: Formspree</h2>
   <p>Für das Kontaktformular wird der Dienst <strong>Formspree</strong> (Formspree Inc., 303 Twin Dolphin Dr, Redwood City, CA 94065, USA) genutzt. Die von Ihnen übermittelten Daten werden auf Servern von Formspree verarbeitet. Formspree verpflichtet sich zur Einhaltung der DSGVO. Weitere Informationen: <a href="https://formspree.io/legal/privacy-policy" target="_blank">https://formspree.io/legal/privacy-policy</a></p>
 
+  <h2>WhatsApp Business</h2>
+  <p>Wenn Sie über den WhatsApp-Button mit mir in Kontakt treten, verwenden Sie den Messaging-Dienst WhatsApp Business der Meta Platforms Ireland Ltd., 4 Grand Canal Square, Grand Canal Harbour, Dublin 2, Irland. Mit dem Anklicken des WhatsApp-Buttons wird eine Verbindung zu WhatsApp hergestellt und es gelten die Datenschutzrichtlinien von WhatsApp. Dabei können personenbezogene Daten (z. B. IP-Adresse, Nutzungsdaten) durch Meta verarbeitet und gegebenenfalls auf Servern außerhalb der EU gespeichert werden. Die Kommunikation über WhatsApp erfolgt auf Grundlage Ihrer freiwilligen Kontaktaufnahme gemäß Art. 6 Abs. 1 lit. a DSGVO. Ich nutze Ihre Daten ausschließlich zur Bearbeitung Ihrer Anfrage. Weitere Informationen zum Datenschutz bei WhatsApp finden Sie unter: <a href="https://www.whatsapp.com/legal/privacy-policy-eea" target="_blank">https://www.whatsapp.com/legal/privacy-policy-eea</a></p>
+  
   <h2>Keine Cookies, kein Tracking</h2>
   <p>Diese Website verwendet keine Cookies und keine Analyse- oder Tracking-Tools.</p>
 
@@ -47,7 +50,7 @@
     Gilmstraße 4<br>
     A-4600 Wels<br>
     E-Mail: juppe.werner[at]gmx.at<br>
-    Telefon: 0681-10805810
+    Telefon: +43(0)68110805810
   </p>
 </body>
 </html>
