--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@ nav a:hover {
     <div class="logo-container">
       <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
         <div class="logo-placeholder"></div>
-        <div class="schriftzug">Personenbetreuung</div>
+        <div class="schriftzug">Flexible Betreuung</div>
       </a>
       <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
         ☰
@@ -330,18 +330,20 @@ nav a:hover {
 <section id="home" class="hero">
   <div class="hero-overlay">
     <div class="hero-content">
-      <h1>Mobile & flexible Altenbetreuung</h1>
-      <p>Mit Herz, Kompetenz und Zeit für Menschen</p>
+      <h1>Mobile & flexible Betreuung</h1>
+      <p>Mit Herz, Kompetenz und Zeit für Menschen jeden Alters</p>
       <a href="#kontakt" class="cta-button">📞 Jetzt Kontakt aufnehmen</a>
     </div>
   </div>
 </section>
   
+  <!-- buntes Bild soll nicht angezeigt werden
   <section>
     <div style="max-width: 900px; margin: auto;">
       <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;"">
     </div>
   </section>
+  -->
 
   <section id="ueber">
     <h1>Über mich</h1>
