--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ nav a:hover {
   <section id="ueber">
     <h1>Über mich</h1>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center; gap: 1.5rem;"></div>
-    <img src="flexbetreuung1.jpg" alt="Portrait von Werner Juppe" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;">
+    <img src="werner-m-hut_2024_small.jpg" alt="Portrait von Werner Juppe" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;">
     <p>Ich heiße Werner Juppe und biete mobile und flexible Altenbetreuung im Raum Wels (Oberösterreich) an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Senioren und ihre Angehörigen im Alltag.</p>
   </section>
 
