--- a/index.html
+++ b/index.html
@@ -332,27 +332,19 @@ nav a:hover {
     <div class="hero-content">
       <h1>Mobile & flexible Betreuung</h1>
       <p>Mit Herz, Kompetenz und Zeit für Menschen jeden Alters</p>
-      <a href="#kontakt" class="cta-button">📞 Jetzt Kontakt aufnehmen</a>
+      <a href="#kontakt" class="cta-button">Jetzt Kontakt aufnehmen</a>
     </div>
   </div>
 </section>
-  
-  <!-- buntes Bild soll nicht angezeigt werden
-  <section>
-    <div style="max-width: 900px; margin: auto;">
-      <img src="flexbetreuung_titel1.jpg" alt="Titelbild Flexible Betreuung" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;"">
-    </div>
-  </section>
-  -->
 
   <section id="ueber">
     <h1>Über mich</h1>
     <div style="display: flex; flex-direction: column; align-items: center; text-align: center; gap: 1.5rem;"></div>
     <img src="werner-m-hut_2024_small.jpg" alt="Portrait von Werner Juppe" style="border-radius: 8px; max-width: 100%; height: auto; width: 100%; max-width: 500px;">
-    <p>Ich heiße Werner Juppe und biete mobile und flexible Altenbetreuung im Raum Wels (Oberösterreich) an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Senioren und ihre Angehörigen im Alltag.</p>
+    <p>Ich heiße Werner Juppe und biete mobile und flexible Betreuung im Raum Wels (Oberösterreich) an. Mit Herz, Erfahrung und Menschlichkeit unterstütze ich Menschen jeden Alters und ihre Angehörigen im Alltag.</p>
   </section>
 
-  <a href="tel:0123456789" class="cta-button">📞 Jetzt anrufen</a>
+  <a href="tel:068110805810" class="cta-button">📞 Jetzt anrufen</a>
 
   <section id="leistungen">
     <h2>Leistungen</h2>
@@ -363,7 +355,7 @@ nav a:hover {
       </div>
       <div class="leistung-box">
         <h3>Pflegeunterstützung</h3>
-        <p>Unterstützung bei Körperpflege, Mobilität und Medikamenteneinnahme.</p>
+        <p>Unterstützung bei Körperpflege, Mobilität und Haushalt.</p>
       </div>
       <div class="leistung-box">
         <h3>Angehörigen-Entlastung</h3>
@@ -374,14 +366,14 @@ nav a:hover {
 
   <section id="arbeitsweise">
     <h2>Arbeitsweise</h2>
-    <p>Ich arbeite zuverlässig, flexibel und auf Augenhöhe mit meinen Klient:innen. Im kostenlosen Erstgespräch klären wir gemeinsam, wie ich bestmöglich unterstützen kann. Dabei stehen Vertrauen, Würde und Individualität immer im Vordergrund.</p>
+    <p>Ich arbeite zuverlässig, flexibel und auf Augenhöhe mit meinen Klienten. Im kostenlosen Erstgespräch klären wir gemeinsam, wie ich bestmöglich unterstützen kann. Dabei stehen Vertrauen, Würde und Individualität immer im Vordergrund.</p>
   </section>
 
-  <a href="tel:0123456789" class="cta-button">📞 Persönliches Gespräch starten</a>
+  <a href="tel:068110805810" class="cta-button">📞 Persönliches Gespräch starten</a>
 
   <section id="kontakt">
     <h2>Kontakt</h2>
-    <p>Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren?</p>
+    <p>Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren? Sie haben die Möglichkeit anzurufen, das Formular auszufüllen oder den grünen Button für eine WhatsApp - Nachricht zu verwenden.</p>
     <!-- Formularbereich optisch abgesetzt -->
     <div class="formular-container">
     <form action="https://formspree.io/f/xblgwqyl" method="POST">
