--- a/index.html
+++ b/index.html
@@ -373,7 +373,9 @@ nav a:hover {
 
   <section id="kontakt">
     <h2>Kontakt</h2>
-    <p>Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren? Sie haben die Möglichkeit anzurufen, das Formular auszufüllen oder den grünen Button für eine WhatsApp - Nachricht zu verwenden.</p>
+      <p style="margin-bottom: 1.5rem;">
+      Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren? Sie haben die Möglichkeit anzurufen, das Formular auszufüllen oder den grünen Button für eine WhatsApp - Nachricht zu verwenden.
+      </p>
     <!-- Formularbereich optisch abgesetzt -->
     <div class="formular-container">
     <form action="https://formspree.io/f/xblgwqyl" method="POST">
