--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@ nav a:hover {
   <section id="kontakt">
     <h2>Kontakt</h2>
       <p style="margin-bottom: 1.5rem;">
-      Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren? Sie haben die Möglichkeit anzurufen, das Formular auszufüllen oder den grünen Button für eine WhatsApp - Nachricht zu verwenden.
+      Sie möchten mehr erfahren oder ein unverbindliches Gespräch vereinbaren? Sie haben die Möglichkeit <strong>anzurufen</strong>, das <strong>Formular</strong> auszufüllen oder den <strong>grünen Button</strong> für eine WhatsApp - Nachricht zu verwenden.
       </p>
     <!-- Formularbereich optisch abgesetzt -->
     <div class="formular-container">
