--- a/index.html
+++ b/index.html
@@ -303,12 +303,19 @@ nav a:hover {
 .whatsapp-float:hover {
   background-color: #1ebc5a;
 }
-    
+
+.container {
+  max-width: 1200px; /* gleiche Breite wie Hero-Background */
+  margin: 0 auto;
+  padding: 0 1.5rem;
+}
+
   </style>
 </head>
 <body>
   
    <header>
+    <div class="container">
     <div class="logo-container">
       <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
         <div class="logo-placeholder"></div>
@@ -325,6 +332,7 @@ nav a:hover {
       <a href="#arbeitsweise">Arbeitsweise</a>
       <a href="#kontakt">Kontakt</a>
     </nav>
+    </div>
   </header>
 
   <!-- Hero Section -->
