--- a/index.html
+++ b/index.html
@@ -378,7 +378,9 @@ nav a:hover {
     <p>Ich arbeite zuverlässig, flexibel und auf Augenhöhe mit meinen Klienten. Im kostenlosen Erstgespräch klären wir gemeinsam, wie ich bestmöglich unterstützen kann. Dabei stehen Vertrauen, Würde und Individualität immer im Vordergrund.</p>
   </section>
 
-  <a href="tel:068110805810" class="cta-button">📞 Persönliches Gespräch starten</a>
+  <div class="container">
+    <a href="tel:068110805810" class="cta-button">📞 Persönliches Gespräch starten</a>
+  </div>
 
   <section id="kontakt">
     <h2>Kontakt</h2>
