--- a/index.html
+++ b/index.html
@@ -341,10 +341,12 @@ footer .container {
   <!-- Hero Section -->
 <section id="home" class="hero">
   <div class="hero-overlay">
-    <div class="hero-content">
-      <h1>Mobile & flexible Betreuung</h1>
-      <p>Mit Herz, Kompetenz und Zeit für Menschen jeden Alters</p>
-      <a href="#kontakt" class="cta-button">Jetzt Kontakt aufnehmen</a>
+    <div class="container">
+      <div class="hero-content">
+        <h1>Mobile & flexible Betreuung</h1>
+        <p>Mit Herz, Kompetenz und Zeit für Menschen jeden Alters</p>
+        <a href="#kontakt" class="cta-button">Jetzt Kontakt aufnehmen</a>
+      </div>
     </div>
   </div>
 </section>
