--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       background-color: #cccccc;
       border-bottom: 6px solid var(--border);
       padding: 1rem 2rem;
+      margin-bottom: 1rem; /* Abstand zur Hero Section */
       z-index: 1000;
       display: flex;
       justify-content: space-between;
