--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ nav a:hover {
 }
 
 .hero-content {
-  padding: 2rem;
+  padding: 2rem 1.5rem; /* Top-Bottom / Left-Right */
 }
 
 .hero h1 {
@@ -217,7 +217,7 @@ nav a:hover {
 }
 
 /* Mobilfreundlich */
-@media (max-width: 1000px) {
+@media (max-width: 600px) {
   .hero h1 {
     font-size: 1.8rem;
   }
@@ -240,7 +240,7 @@ nav a:hover {
   transition: background-color 0.2s ease;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 600px) {
   header {
     flex-direction: column;
     align-items: flex-start;
