--- a/index.html
+++ b/index.html
@@ -318,6 +318,22 @@ footer .container {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
   }
+
+@media (min-width: 1024px) {
+  header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  nav {
+    justify-content: flex-end;
+    flex-grow: 1;
+  }
+
+  .logo-container {
+    flex-shrink: 0;
+  }
 }
 
   </style>
