--- a/index.html
+++ b/index.html
@@ -277,6 +277,9 @@ nav a:hover {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    max-width: 1600px;
+    margin: 0 auto;
+    padding: 0 2rem;
   }
 
   nav {
@@ -285,8 +288,6 @@ nav a:hover {
     justify-content: flex-end;
     align-items: center;
     gap: 2rem;
-    margin-top: 0;
-    width: auto;
     flex-grow: 1;
   }
 
@@ -354,22 +355,22 @@ footer .container {
   
    <header>
     <div class="container">
-    <div class="logo-container">
-      <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
-        <div class="logo-placeholder"></div>
-        <div class="schriftzug">Flexible Betreuung</div>
-      </a>
-      <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
-        ☰
-      </button>
-    </div>
+      <div class="logo-container">
+        <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
+          <div class="logo-placeholder"></div>
+          <div class="schriftzug">Flexible Betreuung</div>
+        </a>
+        <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
+          ☰
+        </button>
+      </div>
     
-    <nav>
-      <a href="#ueber">Über mich</a>
-      <a href="#leistungen">Leistungen</a>
-      <a href="#arbeitsweise">Arbeitsweise</a>
-      <a href="#kontakt">Kontakt</a>
-    </nav>
+      <nav>
+        <a href="#ueber">Über mich</a>
+        <a href="#leistungen">Leistungen</a>
+        <a href="#arbeitsweise">Arbeitsweise</a>
+        <a href="#kontakt">Kontakt</a>
+      </nav>
     </div>
   </header>
 
