--- a/index.html
+++ b/index.html
@@ -360,11 +360,12 @@ footer .container {
           <div class="logo-placeholder"></div>
           <div class="schriftzug">Flexible Betreuung</div>
         </a>
-        <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
-          ☰
-        </button>
-      </div>
-    
+    <div/>
+          <!-- Burger ausserhalb von div logo-container -->
+          <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
+            ☰
+          </button>
+      
       <nav>
         <a href="#ueber">Über mich</a>
         <a href="#leistungen">Leistungen</a>
