--- a/index.html
+++ b/index.html
@@ -356,13 +356,14 @@ footer .container {
    <header>
     <div class="container">
       <div class="logo-container">
+        <!-- Logo links: Platzhalter-Bild und Schriftzug -->
         <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
           <div class="logo-placeholder"></div>
           <div class="schriftzug">Flexible Betreuung</div>
         </a>
       </div>
       
-      <!-- Burger ausserhalb von div logo-container -->
+      <!-- Burger ausserhalb von div logo-container, nur am Handy sichtbar -->
       <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
          ☰
       </button>
