--- a/index.html
+++ b/index.html
@@ -283,12 +283,13 @@ nav a:hover {
   }
 
   nav {
-    display: flex !important;
+    display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     gap: 1.5rem;
     flex-grow: 1;
+    padding-left: 2rem; /* Abstand links zum Logo */
   }
 
   .logo-container {
