--- a/index.html
+++ b/index.html
@@ -239,6 +239,7 @@ nav a:hover {
   cursor: pointer;
   padding: 0.4rem 0.7rem;
   transition: background-color 0.2s ease;
+  margin-left: 1rem; /* NEU Abstand zum Schriftzug */
 }
 
 @media (max-width: 600px) {
