--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      flex-grow: 1; /* NEU Logo Container darf wachsen */
     }
 
     .logo-placeholder {
@@ -239,7 +240,6 @@ nav a:hover {
   cursor: pointer;
   padding: 0.4rem 0.7rem;
   transition: background-color 0.2s ease;
-  margin-left: 2rem; /* NEU Abstand zum Schriftzug */
 }
 
 @media (max-width: 600px) {
