--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      padding-right: 1rem;
       flex-grow: 1; /* NEU Logo Container darf wachsen */
     }
 
