--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ nav a:hover {
 /* === Hero Section === */
 .hero-wetter {
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3)),
-              url('pfad-zum-ausgewählten-bild.jpg') no-repeat center center/cover;
+              url('suv-lightning_1600.jpg') no-repeat center center/cover;
   color: white;
   height: 70vh;
   display: flex;
