--- a/index.html
+++ b/index.html
@@ -185,10 +185,10 @@ nav a:hover {
   align-items: center;
   justify-content: center;
   text-align: center;
-  padding: 0 1.5rem; /* kleiner Seitenabstand für Text auf Mobil */
+  padding: 0 1rem; /* kleiner Seitenabstand für Text auf Mobil */
 }
 
-.hero-wetter h1 {
+.hero-content h1 {
   font-size: 2.5rem;
   margin-bottom: 0.5rem;
   color: white;
@@ -199,7 +199,7 @@ nav a:hover {
   margin: 0 auto;
 }
 
-.hero p {
+.hero-content p {
   font-size: 1.2rem;
   margin-bottom: 2rem;
 }
@@ -228,14 +228,12 @@ nav a:hover {
     background-position: center top;
   }
 
-  .hero-wetter h1 {
+  .hero-content h1 {
     font-size: 1.6rem;
-    padding: 0 1rem;
   }
 
-  .hero-wetter p {
+  .hero-content p {
     font-size: 1rem;
-    padding: 0 1rem;
   }
 }
     
