--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     section {
       padding: 2rem 2rem;
-      max-width: 1600px;
+      max-width: 900px;
       margin: auto;
     }
 
@@ -181,6 +181,7 @@ nav a:hover {
   background: url('suv-lightning_1600.jpg') no-repeat center center/cover;
   color: white;
   height: 70vh;
+  max-width: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
