--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@ footer .container {
       <div class="hero-content">
         <h1>Mobile & flexible Betreuung</h1>
         <p>Mit Herz, Kompetenz und Zeit für Menschen jeden Alters</p>
+        <p>... und bei jeder Witterung &#x1F604;</p>
         <a href="#kontakt" class="cta-button">Jetzt Kontakt aufnehmen</a>
       </div>
 </section>
