--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
   font-size: 1.1rem;
   font-weight: bold;
   text-align: center;
-  margin: 2rem auto;
+  margin-top: 5rem; /* Abstand nach oben */
+  margin-bottom: 0rem; /* kein Abstand nach unten */
   transition: background-color 0.3s ease;
 }
 
