--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
   font-size: 1.1rem;
   font-weight: bold;
   text-align: center;
-  margin-top: 8rem; /* Abstand nach oben */
-  margin-bottom: 0rem; /* kein Abstand nach unten */
+  margin-top: 7rem; /* Abstand nach oben */
+  margin-bottom: 1rem; /* Abstand nach unten */
   transition: background-color 0.3s ease;
 }
 
