--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@ footer .container {
   });
 </script>
   <a href="https://wa.me/4368110805810" class="whatsapp-float" target="_blank" aria-label="WhatsApp-Nachricht senden">
-  💬
+  <img src="bilder/whatsapp-icon.svg" alt="WhatsApp" class="whatsapp-icon">
   </a>
 </body>
 </html>
