--- a/index.html
+++ b/index.html
@@ -312,15 +312,16 @@ nav a:hover {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  background-color: #25D366;
-  color: white;
-  font-size: 1.8rem;
-  padding: 0.6rem 1rem;
-  border-radius: 50px;
-  text-decoration: none;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+  background-color: transparent;
+  padding: 0rem;
+  border: none;
   z-index: 1001;
-  transition: background-color 0.3s ease;
+}
+
+.whatsapp-float img.whatsapp-icon {
+  width: 50px;
+  height: 50px;
+  display: block;
 }
 
 .whatsapp-float:hover {
