--- a/index.html
+++ b/index.html
@@ -357,20 +357,13 @@ footer .container {
   
   <header>
   <div class="container">
-    <!-- Logo links -->
     <div class="logo-container">
-      <a href="#home" style="display: flex; align-items: center; gap: 0.5rem; text-decoration: none;">
+      <a href="#home">
         <div class="logo-placeholder"></div>
         <div class="schriftzug">Flexible Betreuung</div>
       </a>
     </div>
-
-    <!-- Burger-Menü -->
-    <button class="burger" onclick="document.querySelector('nav').classList.toggle('open')">
-      ☰
-    </button>
-
-    <!-- Navigation -->
+    <button class="burger">☰</button>
     <nav>
       <a href="#ueber">Über mich</a>
       <a href="#leistungen">Leistungen</a>
