--- a/index.html
+++ b/index.html
@@ -285,26 +285,29 @@ nav a:hover {
 }
 
 @media (min-width: 601px) {
-  .burger {
-    display: none;
-  }
-
   header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     max-width: 1600px;
     margin: 0 auto;
-    padding: 0 2rem;
+    padding: 0 2rem; /* Abstand links und rechts */
+  }
+
+  .logo-container {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 0.5rem;
+    flex-shrink: 0;
   }
 
   nav {
-    display: flex !important;
+    display: flex;
     flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     gap: 2rem;
-    flex-grow: 1;
+    flex-grow: 0;
   }
 }
     
