--- a/index.html
+++ b/index.html
@@ -253,10 +253,17 @@ nav a:hover {
 @media (max-width: 600px) {
   header .container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;         /* <<< Elemente untereinander */
+    align-items: flex-start;
+    padding: 1rem;
+    gap: 0.5rem;
+  }
+
+  .logo-container {
+    display: flex;
     align-items: center;
-    justify-content: space-between;
-    flex-wrap: nowrap; /* NEU: verhindert Umbruch */
+    gap: 0.5rem;
+    width: 100%;                    /* <<< volle Breite */
   }
 
   .burger {
@@ -267,11 +274,10 @@ nav a:hover {
   nav {
     display: none;
     flex-direction: column;
-    align-items: flex-start;   /* <<< linksbündig */
-    width: 100%;
-    margin-top: 1rem;
-    padding-left: 1rem;        /* <<< Abstand zu Bildschirmrand */
+    align-items: flex-start;
     gap: 0.5rem;
+    width: 100%;
+    padding-top: 1rem;
   }
 
   nav.open {
@@ -279,7 +285,7 @@ nav a:hover {
   }
 
   nav a {
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 0.5rem;
     font-size: 1rem;
   }
 }
