--- a/index.html
+++ b/index.html
@@ -313,12 +313,8 @@ nav a:hover {
   }
 
   nav {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+    display: flex !important;
     gap: 2rem;
-    flex-grow: 0;
   }
 }
     
