--- a/index.html
+++ b/index.html
@@ -253,31 +253,42 @@ nav a:hover {
 @media (max-width: 600px) {
   header .container {
     display: flex;
-    flex-direction: column;         /* <<< Elemente untereinander */
-    align-items: flex-start;
+    flex-direction: row;
+    justify-content: space-between; /* <<< trennt Logo und Button */
+    align-items: center;
     padding: 1rem;
-    gap: 0.5rem;
+    gap: 1rem;
+    width: 100%;
   }
 
   .logo-container {
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    width: 100%;                    /* <<< volle Breite */
+    flex-shrink: 1;              /* <<< Logo darf sich verkleinern */
+    max-width: 70%;              /* <<< verhindert Überlauf */
   }
 
   .burger {
     display: block;
-    margin-left: auto;
+    background-color: var(--orange);
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 1.5rem;
+    padding: 0.4rem 0.7rem;
+    cursor: pointer;
+    flex-shrink: 0;              /* <<< Burger bleibt gleich groß */
   }
 
   nav {
     display: none;
     flex-direction: column;
     align-items: flex-start;
-    gap: 0.5rem;
     width: 100%;
-    padding-top: 1rem;
+    margin-top: 1rem;
+    padding-left: 1rem;
+    gap: 0.5rem;
   }
 
   nav.open {
@@ -285,7 +296,7 @@ nav a:hover {
   }
 
   nav a {
-    padding: 0.5rem 0.5rem;
+    padding: 0.5rem;
     font-size: 1rem;
   }
 }
