--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@ nav a:hover {
     padding: 0 2rem; /* Abstand links und rechts */
   }
 
+  .logo-container {
+    margin-right: 2rem; /* Abstand zum Menü */
+  }
+
   header {
     background-color: #cccccc;
     border-bottom: 6px solid var(--border);
